chore: package.json and cors updated

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "teslo-shop",
-  "version": "0.0.1",
+  "name": "alianza-juridica-mail-service",
+  "version": "0.1.0",
   "description": "",
   "author": "",
   "private": false,
